[gd_scene load_steps=9 format=3 uid="uid://bkxmwf0rc4u8u"]

[ext_resource type="Script" path="res://src/in-game/ball.gd" id="1_ouwt3"]
[ext_resource type="Texture2D" uid="uid://bugqr3pdvl0xb" path="res://sprites/ball/ball-idle.png" id="1_r3dd1"]
[ext_resource type="Texture2D" uid="uid://b1sf2n7hx01h2" path="res://sprites/ball/ball-in-air-1.png" id="2_1f7dw"]
[ext_resource type="Texture2D" uid="uid://q7n3y6iew2md" path="res://sprites/ball/ball-in-air-2.png" id="3_t7gp6"]

[sub_resource type="Curve2D" id="Curve2D_hy6ir"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -360, 240)
}
point_count = 2

[sub_resource type="SpriteFrames" id="SpriteFrames_epudi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_r3dd1")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_1f7dw")
}, {
"duration": 1.0,
"texture": ExtResource("3_t7gp6")
}],
"loop": true,
"name": &"in-air",
"speed": 6.0
}]

[sub_resource type="Curve2D" id="Curve2D_fixck"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 540, 180, 0, 0, 0, 0, 540, 420)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_0re2r"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 360, 240)
}
point_count = 2

[node name="Ball" type="Node"]
script = ExtResource("1_ouwt3")

[node name="DemoTimer" type="Timer" parent="."]

[node name="LeftPath" type="Path2D" parent="."]
position = Vector2(540, 180)
curve = SubResource("Curve2D_hy6ir")

[node name="LeftFollowPath" type="PathFollow2D" parent="LeftPath"]
rotates = false
cubic_interp = false
loop = false

[node name="AnimatedBall" type="AnimatedSprite2D" parent="LeftPath/LeftFollowPath"]
sprite_frames = SubResource("SpriteFrames_epudi")
animation = &"idle"

[node name="CenterPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_fixck")

[node name="CenterFollowPath" type="PathFollow2D" parent="CenterPath"]
position = Vector2(540, 180)
rotates = false
cubic_interp = false
loop = false

[node name="AnimatedBall" type="AnimatedSprite2D" parent="CenterPath/CenterFollowPath"]
sprite_frames = SubResource("SpriteFrames_epudi")
animation = &"idle"

[node name="RightPath" type="Path2D" parent="."]
position = Vector2(540, 180)
curve = SubResource("Curve2D_0re2r")

[node name="RightFollowPath" type="PathFollow2D" parent="RightPath"]
rotates = false
cubic_interp = false
loop = false

[node name="AnimatedBall" type="AnimatedSprite2D" parent="RightPath/RightFollowPath"]
sprite_frames = SubResource("SpriteFrames_epudi")
animation = &"idle"
